@@ -47,6 +47,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.ThreadFactory;
@@ -74,7 +75,7 @@ public abstract class ESMockAPIBasedRepositoryIntegTestCase extends ESBlobStoreR
      */
     @SuppressForbidden(reason = "Uses a HttpServer to emulate a cloud-based storage service")
     protected interface BlobStoreHttpHandler extends HttpHandler {
-        Map<String, BytesReference> blobs();
+        Set<String> blobsKeyset();
     }
 
     private static final byte[] BUFFER = new byte[1024];
@@ -139,14 +140,14 @@ public abstract class ESMockAPIBasedRepositoryIntegTestCase extends ESBlobStoreR
                     h = ((DelegatingHttpHandler) h).getDelegate();
                 }
                 if (h instanceof BlobStoreHttpHandler) {
-                    assertEmptyRepo(((BlobStoreHttpHandler) h).blobs());
+                    assertEmptyRepo(((BlobStoreHttpHandler) h).blobsKeyset());
                 }
             }
         }
     }
 
-    protected static void assertEmptyRepo(Map<String, BytesReference> blobsMap) {
-        List<String> blobs = blobsMap.keySet().stream().filter(blob -> blob.contains("index") == false).collect(Collectors.toList());
+    protected static void assertEmptyRepo(Set<String> blobsKeyset) {
+        List<String> blobs = blobsKeyset.stream().filter(blob -> blob.contains("index") == false).toList();
         assertThat("Only index blobs should remain in repository but found " + blobs, blobs, hasSize(0));
     }
 
